--- a/MediaExtractor/Properties/Resources.es-ES.resx
+++ b/MediaExtractor/Properties/Resources.es-ES.resx
@@ -459,4 +459,7 @@
   <data name="MenuAppearanceLanguageSpanish" xml:space="preserve">
     <value>Español</value>
   </data>
+  <data name="MenuAppearanceLanguageJapanese" xml:space="preserve">
+    <value>Japonés  (日本語)</value>
+  </data>
 </root>
