--- a/MediaExtractor/Properties/Resources.de-DE.resx
+++ b/MediaExtractor/Properties/Resources.de-DE.resx
@@ -201,9 +201,6 @@
   <data name="LabelPreview" xml:space="preserve">
     <value>Vorschau</value>
   </data>
-  <data name="ButtonSaveSelected" xml:space="preserve">
-    <value>Ausgewählte Datei(en) speichern</value>
-  </data>
   <data name="AboutAuthor" xml:space="preserve">
     <value>Autor</value>
   </data>
@@ -227,6 +224,9 @@
   </data>
   <data name="AboutWebsite" xml:space="preserve">
     <value>Webseite</value>
+  </data>
+  <data name="ButtonSaveSelected" xml:space="preserve">
+    <value>Ausgewählte Datei(en) speichern</value>
   </data>
   <data name="CrcDescription" xml:space="preserve">
     <value>CRC32 (cyclic redundancy check) ist eine einfache Hashing-Methode um Daten oder Dateien auf Übereinstimmung zu prüfen. CRC bietet allerdings keinen 100%ige Garantie, daß zwei Dateien identisch sind.  Es ist jedoch ein sehr starkes Indiz, wenn nicht von bewusster Manipulation der Dateien ausgegangen wird.</value>
@@ -399,14 +399,14 @@
   <data name="StatusLoadingEmbedded" xml:space="preserve">
     <value>Lade eingebettete Datei... Bitte warten</value>
   </data>
+  <data name="MenuAppearanceLanguageDefault" xml:space="preserve">
+    <value>Systemsprache (automatisch)</value>
+  </data>
   <data name="DialogMissingWebsite" xml:space="preserve">
     <value>Die Projekt-Webseite konnte nicht geladen werden</value>
   </data>
   <data name="DialogMissingWebsiteTitle" xml:space="preserve">
     <value>Projekt-Webseite nicht geladen</value>
-  </data>
-  <data name="MenuAppearanceLanguageDefault" xml:space="preserve">
-    <value>Systemsprache (automatisch)</value>
   </data>
   <data name="TextErrorInvalidImage" xml:space="preserve">
     <value>Vorschaubild konnte nicht erstellt werden</value>
@@ -461,5 +461,8 @@
   </data>
   <data name="MenuAppearanceLanguageJapanese" xml:space="preserve">
     <value>Japanisch (日本語)</value>
+  </data>
+  <data name="MenuAppearanceLanguageItalian" xml:space="preserve">
+    <value>Italienisch (Italiano)</value>
   </data>
 </root>
