--- a/MediaExtractor/Properties/Resources.es-ES.resx
+++ b/MediaExtractor/Properties/Resources.es-ES.resx
@@ -462,4 +462,7 @@
   <data name="MenuAppearanceLanguageJapanese" xml:space="preserve">
     <value>Japonés  (日本語)</value>
   </data>
+  <data name="MenuAppearanceLanguageItalian" xml:space="preserve">
+    <value>Italiano (Italiano)</value>
+  </data>
 </root>
