--- a/MediaExtractor/Properties/Resources.ja-JP.resx
+++ b/MediaExtractor/Properties/Resources.ja-JP.resx
@@ -462,4 +462,7 @@
   <data name="MenuAppearanceLanguageJapanese" xml:space="preserve">
     <value>日本語</value>
   </data>
+  <data name="MenuAppearanceLanguageItalian" xml:space="preserve">
+    <value>イタリア語 (Italiano)</value>
+  </data>
 </root>
